metadata-retriever/metadata/objects/Resource_Report__c.object
<CustomObject>
    <description>PMO: Project - hours tracking by resource</description>
    <fields>
        <fullName>Actual_Hours_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Hours to Date</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_dollars_to_Date__c</fullName>
        <formula>Actual_Hours_to_Date__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual $ to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <formula>Budget_Hrs__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Hrs__c</fullName>
        <label>Budget Hrs</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_w_Budget_Dollars__c</fullName>
        <formula>Diff_w_Budget__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff w/ Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diff_w_Budget__c</fullName>
        <description>Different with budget work hours.</description>
        <formula>Budget_Hrs__c - Forecast_Final_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff w/ Budget</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hrs_to_Complete__c</fullName>
        <formula>Forecast_Final_Hours__c - Actual_Hours_to_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Hrs to Complete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Final_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Forecast totally hours to complete.</description>
        <label>Forecast Final Hours</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perdent_Complete__c</fullName>
        <formula>Actual_Hours_to_Date__c / Budget_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipName>R00N80000002bA0CEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_hr__c</fullName>
        <label>Rate/hr</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sr Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement Mgr - Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Technical Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer - Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor (onsite)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer - Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Report</label>
    <nameField>
        <displayFormat>RR-{YY}{MM}{0000}</displayFormat>
        <label>Burn Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>